avoid being too small

--- a/resources/assets/less/bem/report-form.less
+++ b/resources/assets/less/bem/report-form.less
@@ -109,6 +109,7 @@
     width: 100%;
     height: 200px;
     max-height: 400px; // don't resize too much...
+    min-height: 100px;
     resize: vertical;
 
     background-color: @_background-color;
